Fix nav to be aligned with name on left (remove left margin).

--- a/_themes/network/css/style.css
+++ b/_themes/network/css/style.css
@@ -382,6 +382,7 @@ article ul#social #youtube {
 
 	nav {
 		padding: 30px 0 10px 0;
+		margin: 0;
 
 		-webkit-text-size-adjust: none;
 		font-size: 35px;
